--- a/src/sass/mdb/_custom.scss
+++ b/src/sass/mdb/_custom.scss
@@ -85,6 +85,22 @@ hr {
 .safari {
   font-weight: 500;
   -webkit-font-smoothing: subpixel-antialiased;
+  div {
+    input {
+      border-radius: 1000rem !important;
+      font-size: larger !important;
+      background-color: transparent !important;
+      border: 3px solid $myBackground !important;
+      padding: .36rem 2.13rem !important;
+      margin: 6px !important;
+      // margin-bottom: 1.5rem !important;
+      height: auto !important;
+      transition: .2s ease-out !important;
+      display: inline-block !important;
+      font-weight: 400 !important;
+    }
+  }
+
 }
 
 .collapse {
@@ -288,22 +304,22 @@ hr {
 }
 
 #mc_embed_signup {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+  margin-top: 3rem !important;
+  margin-bottom: 3rem !important;
 }
 
 #mce-EMAIL {
-  background-color: $myBackground;
-  border-radius: 100000px;
-  box-shadow: none;
-  width: 70%;
-  margin-bottom: 1rem;
-  height: 3rem;
+  background-color: $myBackground !important;
+  border-radius: 100000px !important;
+  box-shadow: none !important;
+  width: 70% !important;
+  // margin-bottom: 1rem !important;
+  height: 3rem !important;
 }
 
 #mce-EMAIL::placeholder {
-  color: $myShadow;
-  margin-left: 1rem;
+  color: $myShadow !important;
+  margin-left: 1rem !important;
 }
 
 #explainFeature {
